<resources>
    <string name="app_name">TourismAsk</string>
    <string name="app_name_with_space">Tourism Ask</string>
    <string name="new_sight">Новое место</string>
    <string name="skip">Пропустить</string>
    <string name="next">Продолжить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="sight_name">Название места</string>
    <string name="sight">Достопримечательность</string>
    <string name="description">Описание</string>
    <string name="input_error">Ошибка ввода</string>
    <string name="settings">Настройки</string>
    <string name="switch_on_advices">Включить подсказки</string>
    <string name="switch_off_advices">Выключить подсказки</string>
    <string name="map">Карта</string>
    <string name="advice">Подсказка</string>
    <string name="selected">Избранные</string>
    <string name="example_title">Example title</string>
    <string name="total">Всего</string>
    <string name="options">Опции</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="coordinates">Координаты</string>
    <string name="longitude">Долгота</string>
    <string name="latitude">Широта</string>
    <string name="enter_name">Введите имя</string>
    <string name="whats_your_name">Как вас зовут?</string>
    <string name="defaultName">Пользователь</string>
    <string name="incorrect_name_text">Поле может содержать только буквы, цифры и знак подчеркивания и быть не короче трёх символов</string>
    <string name="change_name">Изменить имя</string>
    <string name="show_clusters">Показать достопримечательности</string>
    <string name="hide_clusters">Убрать достопримечательности</string>
    <string name="greeting">Доброго пути,</string>
    <string name="sights">Достопримечательности</string>
    <string name="places">Места</string>
    <string name="add_sight">Добавить достопримечательность</string>
    <string name="include_sights">Встроенные места</string>
    <string name="user_sights">Ваши места</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="incorrect_input">Некорректный ввод</string>
    <string name="incorrect_input_text">Убедитесь, что нет пустых полей, вводные корректны</string>
    <string name="more">Подробнее</string>
    <string name="permissin_is_denied">В доступе отказано</string>
    <string name="coordinates_are_not_available_yet">Координаты пока не получены</string>
    <string name="distance_map">Отдалить карту</string>
    <string name="show_me">Показать меня</string>
    <string name="hide_me">Скрыть меня</string>
    <string name="advice_text">Здесь вы можете просмотреть информацию о встроенных местах (достопримечательности Барнаула) или о тех, что добавили сами.</string>
</resources>
