<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_sights"
        android:name="com.krak.tourismask.main_activity.fragments.sights.SightsFragment"
        android:label="@string/sights"
        tools:layout="@layout/sights_fragment" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.krak.tourismask.main_activity.fragments.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/map_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.krak.tourismask.main_activity.fragments.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />
</navigation>