<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/optionsBtn"
        android:layout_width="@dimen/options_width"
        android:layout_height="wrap_content"
        android:background="@drawable/background_options"
        android:fontFamily="@font/quicksand_semi_bold"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="@dimen/options_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsBtn"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toggleClustersBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_sights_new"
            android:fontFamily="@font/quicksand_medium"
            android:padding="8dp"
            android:text="@string/show_clusters"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/distanceMapBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_sights_new"
            android:fontFamily="@font/quicksand_medium"
            android:padding="8dp"
            android:text="@string/distance_map"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toggleMeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_sights_new"
            android:fontFamily="@font/quicksand_medium"
            android:padding="8dp"
            android:text="@string/show_me"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.yandex.mapkit.mapview.MapView>

</androidx.constraintlayout.widget.ConstraintLayout>