<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="2dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sightTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:background="@color/additional_lighter"
            android:gravity="clip_horizontal|center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/sightTriangle"
                android:layout_width="@dimen/sight_icon"
                android:layout_height="@dimen/sight_icon"
                android:layout_marginEnd="4dp"
                android:rotation="30"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/triangle" />

            <TextView
                android:id="@+id/sightTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/exo2_semi_bold"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingLeft="6dp"
                android:text="@string/example_title"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/editSightBtn"
                android:layout_width="@dimen/sight_icon"
                android:layout_height="@dimen/sight_icon"
                android:layout_marginHorizontal="8dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_edit_sight" />

            <ImageButton
                android:id="@+id/deleteSightBtn"
                android:layout_width="@dimen/sight_icon"
                android:layout_height="@dimen/sight_icon"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_delete_sight" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sightContentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/additional_lighter"
            android:padding="12dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/sightName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo2_semi_bold"
                android:text="@string/sight_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sightDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/exo2_semi_bold"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/gotoSightCoordinatesBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sightName" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gotoSightCoordinatesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_goto_sight"
                android:fontFamily="@font/exo2_mariable_font_wght"
                android:padding="12dp"
                android:text="@string/show_on_map"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>