<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/additional">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/adviceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/third_darker"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/adviceCross"
                        android:layout_width="@dimen/info_cross"
                        android:layout_height="@dimen/info_cross"
                        android:background="@android:color/transparent"
                        android:padding="8dp"
                        app:srcCompat="@drawable/cross" />

                    <TextView
                        android:id="@+id/adviceInfoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/philosopher_bold_italic"
                        android:paddingHorizontal="8dp"
                        android:text="@string/advice"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/adviceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo2_mariable_font_wght"
                    android:padding="12dp"
                    android:text="@string/advice_text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/includeSightsTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:background="@color/main"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/includeSightsTriangle"
                        android:layout_width="@dimen/sight_accordion_icon"
                        android:layout_height="@dimen/sight_accordion_icon"
                        android:layout_marginEnd="4dp"
                        android:rotation="30"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/triangle" />

                    <TextView
                        android:id="@+id/includeSightsTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo2_semi_bold"
                        android:paddingLeft="6dp"
                        android:text="@string/include_sights"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/includeSightsContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/main"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/includeSightsList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        app:layoutManager="LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/userSightsTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:background="@color/third"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/userSightsTriangle"
                        android:layout_width="@dimen/sight_accordion_icon"
                        android:layout_height="@dimen/sight_accordion_icon"
                        android:layout_marginEnd="4dp"
                        android:rotation="30"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/triangle" />

                    <TextView
                        android:id="@+id/userSightsTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exo2_semi_bold"
                        android:paddingLeft="6dp"
                        android:text="@string/user_sights"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/userSightsContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/addSightBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/background_sights_new"
                        android:fontFamily="@font/exo2_mariable_font_wght"
                        android:text="@string/add_sight"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/userSightsListLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/third">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/userSightsList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            app:layoutManager="LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>